--- a/CSS/styles4.css
+++ b/CSS/styles4.css
@@ -5,3 +5,21 @@ body {
     margin-top: 10px;
 }
 
+.view {
+    width: 400px;
+    height: 60px;
+    margin-top: 10px;
+}
+
+.bort {
+    width: 400px;
+    height: 60px;
+    margin-top: 10px;
+    
+}
+
+.paragraf {
+    margin-top: 100px;
+    color: white;
+    font-size: small;
+}
