--- a/utv/style.css
+++ b/utv/style.css
@@ -1,6 +1,7 @@
 *{
   padding:0;
   margin: 0;
+
 }
 
 body{
@@ -32,7 +33,27 @@ header{
 }
 
 .header-right{
+  margin: 10px 10px;
   grid-column: 13/13;
+  display: block;
+  border: 1px solid black;
+}
+nav{
+  margin: 10px 10px;
+  grid-column: 1/13;
+  grid-row: 1/1;
+
+}
+.navBar{
+  display: inline-block;
+  text-align: center;
+  padding: 14px 16px;
+  background-color: rgb(136, 136, 136);
+
+}
+.navBar:hover{
+  background-color: rgb(175, 175, 175);
+
 }
 aside{
   grid-column: 1/2;
@@ -59,34 +80,22 @@ footer{
 }
 
 #boxlogin{
-  grid-column: 4/7;
+  grid-column: 5/7;
   grid-row: 3/4;
   border: 1px solid black;
-
+  text-align: right;
+  font-size: 1.5em;
+  min-width: 350px;
+}
+#boxlogin input{
+  height: 20px;
 }
 #boxlogin button{
   background-color: rgb(169, 181, 235);
-  width: 150px;
-  height: 80px;
-  display: block;
-  margin: 10px;
-}
-nav{
-  margin: 5px 0px;
-  grid-column: 1/13;
-  grid-row: 1/1;
-
-}
-.navBar{
+  width: 95%;
+  height: 50px;
   display: inline-block;
-  text-align: center;
-  padding: 14px 16px;
-  background-color: rgb(136, 136, 136);
-
-}
-.navBar:hover{
-  background-color: rgb(175, 175, 175);
-
+  margin: 10px;
 }
 article{
   display:none;
