--- a/utv/style.css
+++ b/utv/style.css
@@ -1,7 +1,9 @@
 *{
   padding:0;
   margin: 0;
-  font-family: Didot, sans-serif;
+  font-family: Average,Didot, sans-serif;
+
+
 }
 
 body{
@@ -28,7 +30,8 @@ body>.container{
 .container-flex{
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
+
 
 }
 header{
@@ -93,6 +96,7 @@ article{
   background-color: rgba(195, 193, 191, 0.7);
   border: 1px rgb(135, 135, 135) solid;
   border-radius: 10px;
+
 }
 footer{
   grid-column: 1/13;
@@ -151,12 +155,15 @@ article{
 
 .book{
   margin: 20px;
-  width: 250px;
+  width: 220px;
   height: 400px;
-  background-color: white;
+  max-height: 400px;
+  background-color: rgba(251, 255, 254, 0.25);
 }
+
 .container-flex li{
   display: inline-block;
+  position: relative;
   border-radius: 5px;
 }
 .container-flex ul{
@@ -164,5 +171,40 @@ article{
 }
 
 .container-flex li img{
+
   width: 100%;
+  max-height: 250px;
+
+}
+
+.container-flex li div{
+  font-family: "Freckle Face";
+  font-size: 1.2em;
+  height: 50px;
+  text-align: center;
+}
+
+#btnAddToShell{
+  background-color: rgb(154, 232, 241);
+  width: 100%;
+  height: 40px;
+  margin-top: 20px;
+}
+
+.searchParameters{
+  flex: 1 1 100%;
+  border: 1px solid black;
+  height: 100px;
+  background-color: rgba(209, 209, 209, 0.42);
+
+}
+.searchParameters div{
+  padding: 5px;
+  width: 100%;
+  margin: 0 auto;
+}
+.searchParameters>div>*{
+  padding: 10px;
+  margin: 10px;
+  font-size: 1em;
 }
