--- a/utv/style.css
+++ b/utv/style.css
@@ -134,9 +134,8 @@ article{
   background-color: rgb(249, 93, 93);
   border-radius: 10px;
   position: absolute;
-  top: 5px;
+  top: 10px;
   right: 10px;
-
 }
 #loggOut:hover{
   background-color: rgb(195, 13, 13);
@@ -153,42 +152,62 @@ article{
  list-style-type: none;
 }
 
-.book{
+
+
+.container-flex li{
   margin: 20px;
-  width: 220px;
+  width: 25%;
   height: 400px;
   max-height: 400px;
   background-color: rgba(251, 255, 254, 0.25);
-}
-
-.container-flex li{
   display: inline-block;
   position: relative;
   border-radius: 5px;
+  font-family: Arya, sans-serif;
+
 }
 .container-flex ul{
   list-style-type: none;
 }
 
 .container-flex li img{
-
-  width: 100%;
+  width: 220px;
   max-height: 250px;
+  min-height: 250px;
+  float: left;
+  margin-right: 8px;
+  margin-bottom: 2px;
 
 }
 
 .container-flex li div{
-  font-family: "Freckle Face";
-  font-size: 1.2em;
-  height: 50px;
-  text-align: center;
+  width: 100%;
+  font-size: 1em;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgba(181, 181, 193,0.5);
 }
 
 #btnAddToShell{
-  background-color: rgb(154, 232, 241);
-  width: 100%;
-  height: 40px;
-  margin-top: 20px;
+  background-color: rgb(0, 16, 84);
+  color:rgb(47, 184, 73);
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  font-size: 1em;
+  font-weight: 600;
+  position: absolute;
+  top: 360px;
+  right: 5px;
+
+}
+#btnAddToShell:after{
+  content:"+";
+  padding:2px;
+
+}
+#btnAddToShell:focus{
+  outline:none;
 }
 
 .searchParameters{
@@ -202,6 +221,7 @@ article{
   padding: 5px;
   width: 100%;
   margin: 0 auto;
+
 }
 .searchParameters>div>*{
   padding: 10px;
