--- a/utv/style.css
+++ b/utv/style.css
@@ -44,8 +44,8 @@ header{
   margin: 10px 10px;
   min-width: 150px;
   grid-column: 13/13;
-  display: block;
-
+  display: block; 
+  opacity: 1;  
 }
 nav{
   margin: 0px 0px;
