--- a/utv/style.css
+++ b/utv/style.css
@@ -274,17 +274,33 @@ article{
 
 }
 .pop-up-loginMenu label{
-  display: inline-block;
+  display: block;
+  line-height: 20px;
   width: 25%;
   text-align: right;
-  margin: 5px;
+
 }
+.pop-up-loginMenu input{
+  display: inline-block;
+  position: absolute;
+  margin-left: 10px;
+  width: 150px;
+  border-radius: 10px;
+
+  padding-left: 5px;
+}
+.pop-up-loginMenu input:focus{
+  content:"<-";
+}
+
 .pop-up-loginMenu p{
-  display: block;
+  display: inline-block;
   position: relative;
   top: 60px;
-  margin: 0 auto;
+  left: 10px;
+  width: 80%;
 
+  margin: 0 auto;
 }
 .pop-up-loginMenu a{
   position: absolute;
