--- a/utv/style.css
+++ b/utv/style.css
@@ -29,10 +29,31 @@ body>.container{
 .container-flex{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-
-
+  justify-content: flex-start;
+  
 }
+
+.contact {
+    text-align: left;
+}
+
+
+
+
+
+
+p {
+    margin-top: 10px;
+    color: white;
+    text-align: left;
+}
+
+h3 {
+    color: white;
+}
+
+
+
 /*
 header{
   grid-column: 1/13;
@@ -94,9 +115,10 @@ article{
   padding-top: 70px;
   grid-column: 2/13;
   grid-row: 1/11;
-  background-color: rgba(195, 193, 191, 0.7);
+  background-color: rgb(54, 52, 51);
   border: 1px rgb(135, 135, 135) solid;
   border-radius: 10px;
+  opacity: 0.9;
 
 }
 .article{
@@ -106,9 +128,10 @@ article{
 footer{
   grid-column: 1/13;
   grid-rows:11/11;
-  background-color: rgba(195, 193, 191, 0.7);
+  background-color: rgb(54, 52, 51);
   border: 1px rgb(135, 135, 135) solid;
   border-radius: 10px;
+  opacity: 0.9;
 }
 
 .userOnNavBar{
