--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,9 @@
-p {
+#text {
     margin-top: 30px;
     
 }
 
-#text {
+#text1 {
     margin-top: 100px;
     text-align: center;
     position: relative;
